# arcium-dark-prediction-market

./: .env.example  .gitignore  ARCHITECTURE.md  ARCIUM_INTEGRATION.md  Anchor.toml  Arcium.toml  CODE_GUIDE.md  Cargo.toml  DEPLOYMENT.md  GITHUB_SETUP.md  HACKATHON_SUBMISSION.md  LOCAL_SETUP.md  PROJECT_SUMMARY.md  PULL_REQUEST.md  QUICK_START.md  README.md  SUBMISSION.md  VIDEO_RECORDING_GUIDE.md  package-lock.json  package.json  push-to-github.sh  setup-github.sh  tsconfig.json
app/: arcium-client.ts  index.ts
encrypted-ixs/: generate_randomness.rs  place_bet.rs  resolve_market.rs
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/create/: page.tsx
frontend/app/explore/: page.tsx
frontend/app/market/[id]/: page.tsx
frontend/app/my-bets/: page.tsx
frontend/components/: bet-dialog.tsx  footer.tsx  header.tsx  market-card.tsx
frontend/components/ui/: badge.tsx  button.tsx
frontend/lib/: arcium-client.ts  constants.ts  types.ts  utils.ts  wallet.tsx
programs/dark-prediction-market/: Cargo.toml
programs/dark-prediction-market/src/: errors.rs  lib.rs  state.rs
programs/dark-prediction-market/src/instructions/: claim_winnings.rs  initialize_market.rs  mod.rs  place_bet.rs  resolve_market.rs
tests/: dark-prediction-market.test.ts
