[package]
name = "dark-prediction-market"
version = "0.1.0"
description = "Private prediction market using Arcium encrypted compute"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dark_prediction_market"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
arcium-sdk = { version = "0.1.0", optional = true }
solana-program = "1.18"

[dev-dependencies]
solana-program-test = "1.18"
